--- a/kafka-remote.yml
+++ b/kafka-remote.yml
@@ -14,7 +14,7 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 20Gi
+      storage: 5Gi
 ---
 apiVersion: v1
 kind: Service
@@ -57,6 +57,13 @@ spec:
             claimName: kafka-pv-claim
       containers:
         - name: kafka-container
+          resources:
+            limits:
+              cpu: "2"
+              memory: 1Gi
+            requests:
+              cpu: "2"
+              memory: 1Gi
           image: ilisius/kafka-kraft
           imagePullPolicy: Always
           ports:
