--- a/keda.yml
+++ b/keda.yml
@@ -7,6 +7,7 @@ spec:
   scaleTargetRef:
     name: phase2
   pollingInterval: 10
+  maxReplicaCount:  5
   triggers:
   - type: kafka
     metadata:
@@ -24,6 +25,7 @@ spec:
   scaleTargetRef:
     name: phase3
   pollingInterval: 10
+  maxReplicaCount:  5
   triggers:
   - type: kafka
     metadata:
