--- a/phase1-deployer.yaml
+++ b/phase1-deployer.yaml
@@ -51,6 +51,18 @@ spec:
           imagePullPolicy: Always
           name: phase1-deployer
       restartPolicy: Always
+      nodeSelector:
+        worker: "true"
+      tolerations:
+      - key: "node.kubernetes.io/unreachable"
+        operator: "Exists"
+        effect: "NoExecute"
+        tolerationSeconds: 10
+      - key: "node.kubernetes.io/not-ready"
+        operator: "Exists"
+        effect: "NoExecute"
+        tolerationSeconds: 10
+
 ---
 apiVersion: v1
 kind: Service
@@ -79,3 +91,20 @@ spec:
       services:
         - name: phase1-deployer
           port: 80
+      middlewares:
+        - name: cors-phase1
+          namespace: sdtd
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: cors-phase1
+  namespace: sdtd
+spec:
+  headers:
+    accessControlAllowMethods:
+      - "*"
+    accessControlAllowOriginList:
+      - "*"
+    accessControlMaxAge: 100
+    addVaryHeader: true
